@@ -526,6 +526,9 @@ Release 2.7.0 - UNRELEASED
 
     HADOOP-11363 Hadoop maven surefire-plugin uses must set heap size. (stevel)
 
+    HADOOP-10134 [JDK8] Fix Javadoc errors caused by incorrect or illegal tags in doc
+    comments. (apurtell via stevel)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
